Fix issue with card spacing on cta cards

--- a/components/RecommendationCard/index.module.scss
+++ b/components/RecommendationCard/index.module.scss
@@ -4,9 +4,9 @@
 	min-width: 34rem;
 	min-height: 27rem;
 	background: $prim_white;
-	padding: 2rem;
 	color: $prim_dark_2;
 	border-radius: 3px;
+	padding: 2rem 0;
 
 	h3 {
 		font-size: $fontsize_subtitle_24;
