--- a/containers/LeadsTrackerCont/BannerCTASection/index.module.scss
+++ b/containers/LeadsTrackerCont/BannerCTASection/index.module.scss
@@ -77,7 +77,7 @@
 	background: $prim_white;
 	border: 1px solid $grey_2;
 	color: $prim_dark_2;
-	padding: 2rem;
+	padding: 2rem 0;
 	border-radius: 5px;
 
 	h3 {
